@startuml

class GradeTrackerGUI {
}

class Grade {
}

class JsonWriter {
}

class JsonReader {
}

class Student {
}

class Course {
}

class EventLog {
}

class Event {
}

GradeTrackerGUI *--> "0..*" Student : students
GradeTrackerGUI *--> "0..*" Course : courses
GradeTrackerGUI *--> "1" JsonWriter : jsonWriter
GradeTrackerGUI *--> "1" JsonReader : jsonReader
GradeTrackerGUI ..> Grade : <<uses>>

Student "1" --> "0..*" Course : enrolledCourses

Course ..> EventLog : uses
Course ..> Event : uses
Course ..> Grade : <<uses>>

EventLog "1" --> "0..*" Event : events

@enduml